Add styles to user profile

--- a/dbcoverflow/app/views/users/_user_new_form.html.erb
+++ b/dbcoverflow/app/views/users/_user_new_form.html.erb
@@ -12,6 +12,6 @@
     <%= f.label :email %> <br>
     <%= f.text_field :email %>
 <br><br>
-  <%= f.submit "create my account" %>
+  <%= f.submit "Submit" %>
 
 <% end %>
