--- a/dbcoverflow/app/views/layouts/application.html.erb
+++ b/dbcoverflow/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DBC Overflow</title>
+  <title>Insung Overflow</title>
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= stylesheet_link_tag 'application', "http://fonts.googleapis.com/css?family=Open+Sans:300,700,800" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -12,7 +12,7 @@
   <div id="top-nav">
     <nav>
         <ul>
-          <li id="name"><%= link_to "DBC OVERFLOW", root_path %></li>
+          <li id="name"><%= link_to "INSUNG OVERFLOW", root_path %></li>
           <% if session[:user_id] %>
           <li><%= link_to "My Profile", user_path(session[:user_id]) %></li>
           <li><%= link_to "Logout", logout_path, method: :delete %></li>
