--- a/dbcoverflow/app/views/users/show.html.erb
+++ b/dbcoverflow/app/views/users/show.html.erb
@@ -1,6 +1,4 @@
-<h1>Hello </h1>
-
-<%= link_to "Update Profile", edit_user_path(@user) %>
-
+<h1>Profile for <%= @user.username %></h1><h3><%= @user.email %></h3>
+<%= link_to "Update Account", edit_user_path(@user) %> |
 <%= link_to "Delete Account", user_path(@user), method: :delete, data: { confirm: "Are you sure you want to say good-bye forever?"} %>
 
