--- a/dbcoverflow/app/views/questions/index.html.erb
+++ b/dbcoverflow/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if session[:user_id]%>
     <%= form_for @question, html: { class: "form-group" } do |f| %>
-      <%= f.text_area :body %><br><br>
+      <%= f.text_area :body, cols: 105, rows: 10 %><br><br>
       <%= f.submit "Post Question", html: { class: "input-control" } %>
     <% end %>
   <% else %>
